fixed sizing on mobile

--- a/dojoStyle.css
+++ b/dojoStyle.css
@@ -1,5 +1,7 @@
 * {
 	font-family: 'Roboto', sans-serif;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-tap-highlight-color: transparent;
 }
 
 html, body {
@@ -524,7 +526,7 @@ a, a:link, a:visited {
 	background-color: #263238;
 
 	box-shadow: 0 3px 6px rgba(0, 0, 0, .16), 0 3px 6px rgba(0, 0, 0, .23);
-	
+
 	transition: transform 700ms;
 	transition-timing-function: ease;
 }
