--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,6 +1,8 @@
 * {
 	font-family: 'Roboto', sans-serif;
 	box-sizing: border-box;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-tap-highlight-color: transparent;
 }
 
 a:visited, a:link {
